[package]
name = "zoho-crm"
version = "0.1.0"
description = "Zoho CRM client built in Rust."
license = "MIT"
repository = "https://github.com/rideron89/zoho-crm"
homepage = "https://github.com/rideron89/zoho-crm"
documentation = "https://github.com/rideron89/zoho-crm"
authors = ["rideron89"]
edition = "2018"
keywords = ["zoho"]

# files to include in the upload to crates.io
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockito = "0.21.0"
