[package]
name = "zohoxide-crm"
version = "0.3.1"
description = "Library to help interact with v2 of the Zoho CRM API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinchona/zohoxide-crm"
homepage = "https://github.com/vinchona/zohoxide-crm"
documentation = "https://docs.rs/zohoxide-crm/0.3.1/zohoxide_crm"
authors = ["rideron89", "vinchona"]
edition = "2018"
keywords = ["zoho"]

# files to include in the upload to crates.io
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.5.1"

[dev-dependencies]
mockito = "0.31.0"
